--- a/src/main/resources/application.yml.example
+++ b/src/main/resources/application.yml.example
@@ -1,8 +1,3 @@
-api-secret-keys:
-  kr:
-    go:
-      data:
-        busan-air-quality:
-      seoul:
-        data:
-          seoul-air-quality:
+secret:
+  seoul-air-quality: ""
+  busan-air-quality: ""
