--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ asciidoctor {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-web'
