--- a/src/main/resources/application.yml.example
+++ b/src/main/resources/application.yml.example
@@ -1,3 +1,20 @@
+logging:
+  level:
+    org:
+      springframework: "info"
+      zerock: "debug"
+
+spring:
+  cache:
+    type: redis
+    redis:
+      cache-null-values: true
+      time-to-live: 3600
+
+  redis:
+    host: localhost
+    port: 6379
+
 secret:
   seoul-air-quality: ""
   busan-air-quality: ""
